fixed overflow-x

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
@@ -46,6 +46,7 @@ section {
 }
 
 a {
+  cursor: pointer;
   color: $white;
 
   &:hover {
