--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -277,6 +277,15 @@
     background-repeat: no-repeat;
     position: relative;
     z-index: 0;
+    
+    &:hover {
+      color: $accent;
+      opacity: 1;
+      
+      .methods__arrow {
+        stroke: $accent;
+      }
+    }
 
     &::before {
       content: '';
@@ -299,26 +308,6 @@
       flex-direction: column;
       justify-content: space-between;
       min-height: 100%;
-
-      &::before {
-        content: '';
-        position: absolute;
-        width: 360px;
-        min-height: 300px;
-        display: block;
-        top: -25px;
-        left: -25px;
-        right: -25px;
-      }
-
-      &:hover {
-        color: $accent;
-        opacity: 1;
-
-        .methods__arrow {
-          stroke: $accent;
-        }
-      }
 
       &:active {
         color: $white;
@@ -647,7 +636,9 @@
     }
 
     &-img {
-      max-width: 380px;
+      @media (min-width: '380px') {
+        max-width: 380px;
+      }
       height: 100%;
     }
 
